Update of main code files
Extra comments and latest figures.

--- a/PCR_MLR.ipynb
+++ b/PCR_MLR.ipynb
@@ -1,1 +1,150 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"PCR_MLR.ipynb","provenance":[],"collapsed_sections":[],"mount_file_id":"1qeqjt2yaTAxekYp2sJdaCwbtabMqINTT","authorship_tag":"ABX9TyP7Dszx/ExvHDqXjYrxEMnC"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["# Linear regression for predicting streamflow error in PCR model\n","\n","A linear regression is fitted to the output of the PCR model and meteorological data to predict its error."],"metadata":{"id":"sFbfFehWLo-A"}},{"cell_type":"code","source":["!pip install hydroeval"],"metadata":{"id":"N7kC3huzBEnr"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["#set the model parameters\n","RUNS = 5              #number of runs to perform\n","LAG = True           #use lagged variables or not\n","LOCATION = 'lobith'   #set the location\n","\n","#import libraries\n","import pandas as pd\n","import numpy as np\n","from sklearn.linear_model import LinearRegression\n","from datetime import datetime\n","import hydroeval as he\n","\n","#set input and output folders\n","in_folder = f'/content/drive/MyDrive/ADS/Final Thesis Project/temp/formatted_data/{LOCATION}/'\n","out_folder = f'/content/drive/MyDrive/ADS/Final Thesis Project/temp/predictions/{LOCATION}/'\n","\n","#initiate the summary string by writing the current time and date\n","now = datetime.now()\n","dt_string = now.strftime(\"%d/%m/%Y %H:%M:%S\")\n","\n","mlr_summary = dt_string + '\\n'\n","pcr_summary = dt_string + '\\n'\n","\n","#loop for all test set possibilities\n","for i in range(1,RUNS+1):\n","\n","  #read the data according to the mode\n","  path = in_folder + 'no_'*(not LAG) + f'lag_{i}.npz'\n","  with np.load(path) as f:\n","    X_train, X_test, y_train, y_test, obs = list(f.values())\n","\n","  #fit the model and make a prediction\n","  lm = LinearRegression()\n","  lm.fit(X_train,y_train)\n","  y_pred =  lm.predict(X_test)\n","\n","  #compute the MLR and PCR predictions and evaluate them\n","  pcr = obs - y_test\n","  pred = pcr + y_pred\n","\n","  nse = he.evaluator(he.nse, pred, obs)\n","  kge, r, alpha, beta = he.evaluator(he.kge, pred, obs)\n","\n","  nse_pcr = he.evaluator(he.nse, pcr, obs)\n","  kge_pcr, r, alpha, beta = he.evaluator(he.kge, pcr, obs)\n","\n","  #write the results in the log string\n","  mlr_summary += f'***\\nModel: MLR\\nLag: {LAG}\\nTest split: {i}\\nNSE: {nse[0]}\\nKGE: {kge[0]}\\n'\n","  pcr_summary += f'***\\nModel: PCR\\nTest split: {i}\\nNSE: {nse_pcr[0]}\\nKGE: {kge_pcr[0]}\\n'\n","\n","  #save the predictions in the drive\n","  np.save(out_folder + 'no_'*(not LAG) + f'lag/pcr/pcr_test_{i}', pcr)\n","  np.save(out_folder + 'no_'*(not LAG) +f'lag/mlr/mlr_test_{i}', pred)\n","\n","#save the results\n","with open(out_folder + 'no_'*(not LAG) + 'lag/mlr/mlr_summary.txt', 'w') as f:\n","    f.write(mlr_summary)\n","\n","with open(out_folder + 'no_'*(not LAG) + 'lag/pcr/pcr_summary.txt', 'w') as f:\n","    f.write(pcr_summary)"],"metadata":{"id":"5g1sRn2mZUn3","executionInfo":{"status":"ok","timestamp":1654857528791,"user_tz":-120,"elapsed":23118,"user":{"displayName":"Oriol Pomarol","userId":"08254266036031937194"}}},"execution_count":2,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "sFbfFehWLo-A"
+   },
+   "source": [
+    "# Linear regression for predicting streamflow error in PCR model\n",
+    "\n",
+    "A linear regression is fitted to the output of the PCR model and meteorological data to predict its error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 6082,
+     "status": "ok",
+     "timestamp": 1655820716452,
+     "user": {
+      "displayName": "Oriol Pomarol",
+      "userId": "08254266036031937194"
+     },
+     "user_tz": -120
+    },
+    "id": "N7kC3huzBEnr",
+    "outputId": "e22736cf-fe9e-497c-a1fc-17466e47d025"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+      "Collecting hydroeval\n",
+      "  Downloading hydroeval-0.1.0-py3-none-any.whl (22 kB)\n",
+      "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from hydroeval) (1.21.6)\n",
+      "Installing collected packages: hydroeval\n",
+      "Successfully installed hydroeval-0.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install hydroeval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "5g1sRn2mZUn3"
+   },
+   "outputs": [],
+   "source": [
+    "RUNS = 5              #number of runs to perform\n",
+    "LAG = True            #use lagged variables or not\n",
+    "LOCATION = 'lobith'   #set the location\n",
+    "\n",
+    "#import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from datetime import datetime\n",
+    "import hydroeval as he\n",
+    "\n",
+    "#set input and output folders (change path to your own)\n",
+    "in_folder = f'/content/drive/MyDrive/ADS/Final Thesis Project/temp/formatted_data/{LOCATION}/'\n",
+    "out_folder = f'/content/drive/MyDrive/ADS/Final Thesis Project/temp/predictions/{LOCATION}/'\n",
+    "\n",
+    "#initiate the summary string by writing the current time and date\n",
+    "now = datetime.now()\n",
+    "dt_string = now.strftime(\"%d/%m/%Y %H:%M:%S\")\n",
+    "\n",
+    "mlr_summary = dt_string + '\\n'\n",
+    "pcr_summary = dt_string + '\\n'\n",
+    "\n",
+    "#loop for all test set possibilities\n",
+    "for i in range(1,RUNS+1):\n",
+    "\n",
+    "  #read the data according to the mode\n",
+    "  path = in_folder + 'no_'*(not LAG) + f'lag_{i}.npz'\n",
+    "  with np.load(path) as f:\n",
+    "    X_train, X_test, y_train, y_test, obs = list(f.values())\n",
+    "\n",
+    "  #fit the model and make a prediction\n",
+    "  lm = LinearRegression()\n",
+    "  lm.fit(X_train,y_train)\n",
+    "  y_pred =  lm.predict(X_test)\n",
+    "\n",
+    "  #compute the MLR and PCR predictions and evaluate them\n",
+    "  pcr = obs - y_test\n",
+    "  pred = pcr + y_pred\n",
+    "\n",
+    "  nse = he.evaluator(he.nse, pred, obs)\n",
+    "  kge, r, alpha, beta = he.evaluator(he.kge, pred, obs)\n",
+    "\n",
+    "  nse_pcr = he.evaluator(he.nse, pcr, obs)\n",
+    "  kge_pcr, r, alpha, beta = he.evaluator(he.kge, pcr, obs)\n",
+    "\n",
+    "  #write the results in the log string\n",
+    "  mlr_summary += f'***\\nModel: MLR\\nLag: {LAG}\\nTest split: {i}\\nNSE: {nse[0]}\\nKGE: {kge[0]}\\n'\n",
+    "  pcr_summary += f'***\\nModel: PCR\\nTest split: {i}\\nNSE: {nse_pcr[0]}\\nKGE: {kge_pcr[0]}\\n'\n",
+    "\n",
+    "  #save the predictions in the drive\n",
+    "  np.save(out_folder + 'no_'*(not LAG) + f'lag/pcr/pcr_test_{i}', pcr)\n",
+    "  np.save(out_folder + 'no_'*(not LAG) +f'lag/mlr/mlr_test_{i}', pred)\n",
+    "\n",
+    "#save the results\n",
+    "with open(out_folder + 'no_'*(not LAG) + 'lag/mlr/mlr_summary.txt', 'w') as f:\n",
+    "    f.write(mlr_summary)\n",
+    "\n",
+    "with open(out_folder + 'no_'*(not LAG) + 'lag/pcr/pcr_summary.txt', 'w') as f:\n",
+    "    f.write(pcr_summary)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyMK8nZVjE55sI745jwpB+qG",
+   "collapsed_sections": [],
+   "mount_file_id": "1qeqjt2yaTAxekYp2sJdaCwbtabMqINTT",
+   "name": "PCR_MLR.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
